<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="application_name">Capture The Flag</string>    
    <string name="app_name">CaptureTheFlagAndroid1</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save area</string>
    <string name="action_red_base">Select base red</string>
    <string name="action_blue_base">Select base blue</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash_screen">SplashScreen</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_game_details">GameDetailsActivity</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="picture">Picture</string>

    <!-- Register & Login -->
    <string name="registration">Registration</string>
    <string name="logging">Login</string>
    <string name="registration_canceled">Registration canceled</string>
    <string name="registration_successful">Registration was successful</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="hint_login">Enter your login</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_re_password">Re-type your password</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="re_password">Re-Password</string>
    <string name="passwords_not_equal">Password must be the same</string>
    <string name="login_exists">Login already exists</string>
    <string name="login_too_short">Login must be at least 5 characters long</string>
    <string name="password_too_short">Password must be at least 5 characters long</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">CrashTest has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
	    application to stop. Please help us fix this by sending us error data,
	    all you have to do is click OK</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="no_internet_connection">There is no internet connection!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_message">Loading data, please wait&#8230;</string>

    <!-- Login -->
    <string name="login_successful">Successfully logged in</string>

    <!-- CreateGame -->
    <string name="game_created">Game succssfully created</string>
    <string name="game_name">Game name:</string>
    <string name="game_description">Game description:</string>
    <string name="location_name">Location name:</string>
    <string name="playing_time">Playing time(min):</string>
    <string name="maximum_players">Maximum players:</string>
    <string name="maximum_scoring">Maximum points:</string>
    <string name="cancel">Cancel</string>
    <string name="create_game">Create game</string>
    <string name="edit_game">Edit game</string>
    <string name="game_name_too_short">Game name is a required field</string>
    <string name="location_name_too_short">Location name is a required field</string>
    <string name="playing_time_too_short">Playing time is a required field</string>
    <string name="start_date_past">You can not create the game in the past</string>
    <string name="red_base_too_far">Red base is too far away</string>
    <string name="blue_base_too_far">Blue base is too far away</string>
    <string name="map">Map</string>
    <string name="name_red_team_base">Name red team base</string>
    <string name="name_blue_team_base">Name blue team base</string>

    <!-- EditGame -->
    <string name="game_edited">Game successfully edited</string>
    <string name="game_owner">Game owner</string>
    <string name="game_date">Game start date</string>
    <string name="game_id">Game ID</string>
    <string name="game_status">Game status</string>
    <string name="game_radius">Radius of the game</string>

    <!-- GameDetails -->
    <string name="game_join">Join this game</string>
    <string name="game_leave">Leave this game</string>
    <string name="game_delete">Delete this game</string>
    <string name="game_edit">Edit game</string>
    <string name="game_players">Joined Players</string>    
    <string name="game_players_red">Red Team Players</string>
    <string name="game_players_blue">Blue Team Players</string>
    <string name="game_play">PLAY</string>
    <string name="game_players_none">Nobody has joined this game</string>

    <!-- JoinGame -->
    <string name="game_joined">You have successfully joined this game</string>

    <!-- LeaveGame -->
    <string name="game_left">You have left this game</string>

    <!-- DeleteGame -->
    <string name="game_deleted">You have deleted this game</string>
    <!-- TODO same as DeleteGame.java at line 54 -->
    <string name="game_already_deleted">This game was already deleted</string>

    <!-- Error codes -->
    <string name="error_code_3">Selected game probably does not exist</string>
    <string name="error_code_5">Only Game Owner can delete game</string>
    <string name="error_code_101">Login already in use</string>
    <string name="error_code_102">You cannot join to game in progress</string>
    <string name="error_code_103">You are not signed to this game</string>
    <string name="error_code_104">You are already signed to this game</string>
    <string name="error_code_105">Maximum number of players reached</string>
    <string name="error_code_already_signed">You are already signed in for this game</string>
    <string name="error_code_500">Internal server error</string>
    <string name="error_code_201">Wrong password</string>
    <string name="error_code_202">Wrong username</string>
    <string name="error_code_203">Bad token</string>
    <string name="error_code_204">Unexpected server response</string>
    <!-- Errors from client app -->
    <string name="error_code_1001">Error occurred while retrieving stored logged player data, try to log out and log in again</string>

    <!-- Game List -->
    <string name="title_activity_game_list">GameListActivity</string>
    <string name="create_new_game">+</string>
    <string name="logout">Logout</string>
    <string name="player_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="logout_succesful">You are logged out</string>
    <string name="get_game_list_canceled">Getting game list canceled</string>
    <string name="tab_my_games">My Games</string>
    <string name="tab_closest_games">Closest</string>
    <string name="tab_finished_games">Finished</string>
    <string name="tab_all_games">All Games</string>
    <string name="players_circle">Players Circle</string>
    <string name="signed_label">Signed Label</string>
    
    <!-- GameAreaMap -->
    <string name="title_activity_game_area_map">GameAreaMapActivity</string>
    <string name="login_canceled">Logging in canceled</string>
    <string name="delete_game_canceled">Deleting game canceled</string>
    <string name="create_game_canceled">Creating game canceled</string>
    <string name="edit_game_canceled">Editing game canceled</string>
    <string name="game_details_canceled">Getting game details canceled</string>
    <string name="game_join_canceled">Joining game canceled</string>
    <string name="game_leave_canceled">Leaving game canceled</string>

    <!-- GPS messages -->
    <string name="gps_disabled">Please turn on GPS</string>
    <string name="gps_first_fix_searching">Waiting for valid GPS signal</string>
    <string name="gps_lost_fix">GPS signal was lost. Research for valid signal</string>
    <string name="gps_found_fix">GPS signal obtained</string>
    <string name="gps_default_dialog_title">GPS</string>
    <string name="gps_default_dialog_message">Are you sure to cancel gps location updates? It couse exit from current game</string>
    <string name="gps_default_dialog_accept_button">Yes</string>
    <string name="gps_default_dialog_cancel_button">Cancel</string>
</resources>
