<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/orange_light"
                    android:id="@+id/relativeLayout">
        <TextView
                android:id="@+id/textHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="26dp"
                android:textColor="@color/white"
                android:text="Capture The Flag"/>
        <ImageView
                android:id="@+id/imageIcon"
                android:layout_toLeftOf="@+id/textHeadline"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/actionbar"
                android:contentDescription="@string/picture"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/editLoginReg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="84dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/hint_login"
        android:singleLine="true"
        android:layout_toRightOf="@+id/imageView1"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editPassword2Reg"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/button_blue"
        android:text="@string/register"
        android:textSize="22sp"
        android:maxHeight="48dp"/>

    <EditText
        android:id="@+id/editPasswordReg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editLoginReg"
        android:layout_marginTop="36dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_toRightOf="@+id/imageView2"/>

    <EditText
        android:id="@+id/editPassword2Reg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editPasswordReg"
        android:layout_marginTop="36dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:hint="@string/hint_re_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_alignLeft="@+id/editPasswordReg"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnRegister"
        android:layout_alignTop="@+id/editPasswordReg"
        android:background="@drawable/field_for_icon"
        android:src="@drawable/icons_pass"
        android:contentDescription="@string/picture" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignTop="@+id/editPassword2Reg"
        android:background="@drawable/field_for_icon"
        android:src="@drawable/icons_pass"
        android:contentDescription="@string/picture" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPasswordReg"
        android:layout_alignLeft="@+id/imageView2"
        android:background="@drawable/field_for_icon"
        android:src="@drawable/icons_login"
        android:contentDescription="@string/picture" />

    <TabHost
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/tabHost"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:orientation="vertical">
            <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp">
            </TabWidget>
            <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp">
                <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textLogin"
            android:layout_above="@+id/imageView1"
            android:layout_alignLeft="@+id/imageView1"
            android:text="@string/login"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password"
            android:id="@+id/textPassword"
            android:layout_above="@+id/imageView2"
            android:layout_alignLeft="@+id/imageView2"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/re_password"
            android:id="@+id/textRePassword"
            android:layout_above="@+id/imageView3"
            android:layout_alignLeft="@+id/imageView3"/>


</RelativeLayout>