<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameListActivity" >

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCreateNewGame"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/logout" />

    <Button
        android:id="@+id/btnCreateNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/create_new_game" />
      
    <Button
        android:id="@+id/btnPlayerProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogout"
        android:layout_alignRight="@+id/btnLogout"
        android:layout_below="@+id/spinGameStates"
        android:text="@string/player_profile" />
    
    <Spinner
        android:id="@+id/spinGameStates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCreateNewGame"
        android:layout_below="@+id/textGameStatesFilter"
        android:entries="@array/states_filter_array" />

    <Spinner
        android:id="@+id/spinSearchGames"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/btnCreateNewGame" />
    
    <TextView
        android:id="@+id/textGameStatesFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnCreateNewGame"
        android:layout_alignRight="@+id/btnCreateNewGame"
        android:layout_below="@+id/btnCreateNewGame"
        android:text="@string/gamestates_filter" />

</RelativeLayout>