<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editLogin"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:singleLine="true" >

        <requestFocus android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>
    </EditText>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@color/orange_light"
                    android:id="@+id/relativeLayout">
    <TextView
            android:id="@+id/textHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="26dp"
            android:textColor="@color/white"
            android:text="Capture The Flag"/>
        <ImageView
                android:id="@+id/imageIcon"
                android:layout_toLeftOf="@+id/textHeadline"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/actionbar"
                android:contentDescription="@string/picture"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentRight="true"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnRegistration"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/imageView1"
        android:ems="10"
        android:hint="@string/hint_login"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_blue"
        android:minHeight="72dp"
        android:text="@string/login"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignTop="@+id/editPassword"
        android:src="@drawable/icons_pass"
        android:background="@drawable/field_for_icon"
        android:contentDescription="@string/picture"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPassword"
        android:layout_alignLeft="@+id/imageView2"
        android:background="@drawable/field_for_icon"
        android:src="@drawable/icons_login"
        android:contentDescription="@string/picture" />

    <TabHost
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:id="@+id/tabHost"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignParentLeft="true">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:orientation="vertical">
            <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp">
            </TabWidget>
            <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp">
                <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>